# palette-quantization

./: README.md  pyproject.toml
src/: args.py  main.py
src/color/: distance.py  palette.py
src/image_io/: reader.py  writer.py
src/lut/: lut.py
